minor display changes

--- a/web/nodes.html
+++ b/web/nodes.html
@@ -49,13 +49,13 @@
                     <option value="">All Battery Levels</option>
                     <option value="high">High (>60%)</option>
                     <option value="medium">Medium (20-60%)</option>
-                    <option value="low">Low (<20%)</option>
+                    <option value="low">Low (less than 20%)</option>
                 </select>
                 <select id="sort-by" class="filter-select">
-                    <option value="lastSeen">Last Seen</option>
-                    <option value="name">Name</option>
-                    <option value="battery">Battery</option>
-                    <option value="packets">Packet Count</option>
+                    <option value="lastSeen">Sort: Last Seen</option>
+                    <option value="name">Sort: Name</option>
+                    <option value="battery">Sort: Battery</option>
+                    <option value="packets">Sort: Packet Count</option>
                 </select>
                 <button id="refresh-btn" class="refresh-btn">🔄 Refresh</button>
             </div>
