--- a/web/nodes.html
+++ b/web/nodes.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MeshLink Node Tracking</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://unpkg.com/vis-network@latest/dist/dist/vis-network.min.css" />
     <link rel="stylesheet" href="css/nodes.css">
 </head>
 <body>
@@ -124,7 +123,7 @@
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/vis-network@latest/dist/vis-network.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="js/nodes.js"></script>
 </body>
 </html>
