--- a/web/traceroutes.html
+++ b/web/traceroutes.html
@@ -27,9 +27,10 @@
         </header>
 
         <nav class="tab-nav">
-            <a href="/" class="tab-btn">📋 Node List</a>
-            <a href="/traceroutes.html" class="tab-btn active">🛤️ Traceroutes</a>
-            <a href="/connections.html" class="tab-btn">🔗 Connections</a>
+            <button class="tab-btn active" data-tab="nodes">📋 Node List</button>
+            <button class="tab-btn" data-tab="topology">🔗 Network Topology</button>
+            <button class="tab-btn" data-tab="map">🗺️ Map View</button>
+            <a href="/traceroutes.html" class="tab-btn tab-link">🛤️ Traceroutes</a>
         </nav>
 
         <div class="tab-content active">
