--- a/web/traceroutes.html
+++ b/web/traceroutes.html
@@ -27,9 +27,9 @@
         </header>
 
         <nav class="tab-nav">
-            <button class="tab-btn active" data-tab="nodes">📋 Node List</button>
-            <button class="tab-btn" data-tab="topology">🔗 Network Topology</button>
-            <button class="tab-btn" data-tab="map">🗺️ Map View</button>
+            <a href="/" class="tab-btn" data-tab="nodes">📋 Node List</a>
+            <a href="/" class="tab-btn" data-tab="topology">🔗 Network Topology</a>
+            <a href="/" class="tab-btn" data-tab="map">🗺️ Map View</a>
             <a href="/traceroutes.html" class="tab-btn tab-link">🛤️ Traceroutes</a>
         </nav>
 
